--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,10 @@ dependencies {
 	
 	// log4j 2	
 	compile 'org.apache.logging.log4j:log4j-api:2.+'
-	compile 'org.apache.logging.log4j:log4j-core:2.+'	
+	compile 'org.apache.logging.log4j:log4j-core:2.+'
+	
+	// reflections
+	compile 'org.reflections:reflections:+'	
 }
 
 // clear
@@ -63,5 +66,3 @@ task dist(dependsOn:makedist, type:Sync) {
 	from 'dist'
 	into "$appDir"
 }
-
-ant.importBuild 'build.xml'
